--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,7 +1,7 @@
 development.driver=com.mysql.jdbc.Driver
-#development.username=advisor_root
-#development.password=12345678
-#development.url=jdbc:mysql://db4free.net:3306/advisor_db_dev
-development.username=root
-development.password=123456
-development.url=jdbc:mysql://localhost:3306/healthdb
+development.username=advisor_root
+development.password=12345678
+development.url=jdbc:mysql://db4free.net:3306/advisor_db_dev
+#development.username=root
+#development.password=123456
+#development.url=jdbc:mysql://localhost:3306/healthdb
