--- a/src/test/resources/database.properties
+++ b/src/test/resources/database.properties
@@ -4,4 +4,4 @@ development.driver=com.mysql.jdbc.Driver
 #development.url=jdbc:mysql://db4free.net:3306/advisor_db_dev
 development.username=root
 development.password=123456
-development.url=jdbc:mysql://localhost:3306/healthdb
+development.url=jdbc:mysql://localhost:3306/healthdb?characterEncoding=UTF8&useSSL=false
