--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -2,6 +2,6 @@ development.driver=com.mysql.jdbc.Driver
 #development.username=advisor_root
 #development.password=12345678
 #development.url=jdbc:mysql://db4free.net:3306/advisor_db_dev?characterEncoding=UTF8&useSSL=false
-development.username=root
-development.password=123456
+development.username=health
+development.password=Hacker
 development.url=jdbc:mysql://localhost:3306/healthdb?characterEncoding=UTF8&useSSL=false&serverTimezone=GMT%2B8
