add cloud dev mysql

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,7 +1,18 @@
-development.driver=com.mysql.jdbc.Driver
+#development.driver=com.mysql.jdbc.Driver
 #development.username=advisor_root
 #development.password=12345678
 #development.url=jdbc:mysql://db4free.net:3306/advisor_db_dev?characterEncoding=UTF8&useSSL=false
-development.username=health
-development.password=Hacker
-development.url=jdbc:mysql://localhost:3306/healthdb?characterEncoding=UTF8&useSSL=false&serverTimezone=GMT%2B8
+#development.username=health
+#development.password=Hacker
+#development.url=jdbc:mysql://localhost:3306/healthdb?characterEncoding=UTF8&useSSL=false&serverTimezone=GMT%2B8
+
+#spring.h2.console.enabled=true
+#development.driver=org.h2.Driver
+#development.username=sa
+#development.password=123456
+#development.url=jdbc:h2:file:~/.h2/healthdb;DB_CLOSE_DELAY=-1;MODE=Mysql;TRACE_LEVEL_SYSTEM_OUT=2
+
+development.driver=com.mysql.jdbc.Driver
+development.username=CFtVh10u9l
+development.password=ydRoH6cms0
+development.url=jdbc:mysql://remotemysql.com:3306/CFtVh10u9l?characterEncoding=UTF8&useSSL=false&serverTimezone=GMT%2B8
