--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,15 +1,17 @@
-development.driver=com.mysql.jdbc.Driver
 #development.username=advisor_root
 #development.password=12345678
 #development.url=jdbc:mysql://db4free.net:3306/advisor_db_dev?characterEncoding=UTF8&useSSL=false
 #development.username=health
 #development.password=Hacker
+development.driver=com.mysql.jdbc.Driver
 development.url=jdbc:mysql://localhost:3306/healthdb-dev?characterEncoding=UTF8&useSSL=false&serverTimezone=GMT%2B8
 development.username=root
 development.password=Hacker.com123
-#development.url=jdbc:mysql://localhost:3306/healthdb?characterEncoding=UTF8&useSSL=false&serverTimezone=GMT%2B8
-#development.username=health
-#development.password=Hacker
+
+prod.driver=com.mysql.jdbc.Driver
+prod.url=jdbc:mysql://localhost:3306/healthdb?characterEncoding=UTF8&useSSL=false&serverTimezone=GMT%2B8
+prod.username=health
+prod.password=Hacker
 
 #spring.h2.console.enabled=true
 #development.driver=org.h2.Driver
@@ -21,3 +23,7 @@ development.password=Hacker.com123
 #development.username=CFtVh10u9l
 #development.password=ydRoH6cms0
 #development.url=jdbc:mysql://remotemysql.com:3306/CFtVh10u9l?characterEncoding=UTF8&useSSL=false&serverTimezone=GMT%2B8
+
+wechat.app_id=wx2a6b398bfba3ab6b
+wechat.secret=2e96438aa56b1ae52867f3e2404b17a4
+wechat.grant_type=authorization_code
