--- a/src/test/resources/database.properties
+++ b/src/test/resources/database.properties
@@ -3,5 +3,5 @@ development.driver=com.mysql.jdbc.Driver
 #development.password=12345678
 #development.url=jdbc:mysql://db4free.net:3306/advisor_db_dev
 development.username=root
-development.password=123456
-development.url=jdbc:mysql://localhost:3306/healthdb?characterEncoding=UTF8&useSSL=false
+development.password=Hacker.com123
+development.url=jdbc:mysql://localhost:3306/healthdb-dev?characterEncoding=UTF8&useSSL=false&serverTimezone=GMT%2B8
