--- a/pom.xml
+++ b/pom.xml
@@ -138,4 +138,21 @@
             </plugins>
         </pluginManagement>
     </build>
+    <profiles>
+        <profile>
+            <id>geek</id>
+            <distributionManagement>
+                <repository>
+                    <id>geek-releases</id>
+                    <name>Ali Private Release Repository</name>
+                    <url>https://packages.aliyun.com/maven/repository/2012569-release-howX4t/</url>
+                </repository>
+                <snapshotRepository>
+                    <id>geek-snapshots</id>
+                    <name>Ali Private Snapshot Repository</name>
+                    <url>https://packages.aliyun.com/maven/repository/2012569-snapshot-C6Wvk0/</url>
+                </snapshotRepository>
+            </distributionManagement>
+        </profile>
+    </profiles>
 </project>
